# virtual-fs

./: .gitignore  README.md  lint  pyproject.toml  refresh  setup.py  test
src/virtual_fs/: __init__.py  cli.py  main.py
tests/: test_cli.py  test_rclone_json.py  test_simple.py
